--- a/src/common/i18n/locales/es/translation.json
+++ b/src/common/i18n/locales/es/translation.json
@@ -174,6 +174,7 @@
     "lineageError": "No se pudo obtener el linaje del elemento seleccionado",
     "pathError": "Error al construir el camino seleccionado",
     "keyNotFound": "Clave GBIF no encontrada",
+    "rankNotInTree": "Este taxón (subespecie, variedad, etc.) no existe en el árbol",
     "kingdom": "Reino",
     "searchTaxa": "Buscar taxa",
     "expandResults": "Expandir resultados",
