feat: add more translations

--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -194,11 +194,16 @@
   "challenge": {
     "title": "Daily Challenge",
     "find": "Find",
-    "missionDescription": "Complete the taxonomic path before time runs out.",
+    "missionDescription": "A new species every day to challenge your mastery of the taxonomic tree. Complete all classifications and track your progress.",
     "cancel": "Cancel Challenge",
     "start": "Start Challenge",
     "completed": "Classification complete!",
-    "path": "Kingdom → Species",
+    "stepAttempts": "Attempts: {{count}}",
+    "stepErrors": "Errors: {{count}}",
+    "interactionTips": "Viewed tips",
+    "interactionRevealed": "Revealed answer",
+    "interactionNames": "Viewed popular names",
+    "interactionImage": "Viewed image",
     "timeRemaining": "Time remaining",
     "taxonomicPath": "Taxonomic Path",
     "interactions": "interactions",
@@ -212,7 +217,7 @@
     "belongsTo": "belongs to",
     "howItWorks": "How does the challenge work?",
     "randomTitle": "Random Challenge",
-    "randomMissionDescription": "Complete the taxonomic path of a randomly chosen species.",
+    "randomMissionDescription": "Unlimited challenges with surprise species. Practice freely and strengthen your understanding of taxonomic pathways.",
     "allSpeciesCompleted": "You've completed all available species!",
     "replay": "Play again",
     "nextChallenge": "Next challenge",
@@ -225,7 +230,19 @@
     "nextDay": "Next day",
     "play": "Play",
     "otherDailyChallenges": "Other daily challenges",
-    "dailyChallenges": "Daily Challenges"
+    "dailyChallenges": "Daily Challenges",
+    "timeTaken": "Time",
+    "errorsLabel": "Errors",
+    "accuracyLabel": "Accuracy",
+    "perfectErrors": "0",
+    "selectInTree": "Select in the tree",
+    "loadingPath": "Building path...",
+    "orPlayOtherDate": "or explore another day",
+    "dailyFeature1": "New species every day",
+    "dailyFeature2": "Same for everyone",
+    "randomFeature1": "Mystery species",
+    "randomFeature2": "Unlimited challenges",
+    "randomNoChallenge": "No challenges available right now. Try again later."
   },
 
   "vulnerability": {
