--- a/src/common/i18n/locales/es/translation.json
+++ b/src/common/i18n/locales/es/translation.json
@@ -194,11 +194,16 @@
   "challenge": {
     "title": "Desafío Diario",
     "find": "Encuentra",
-    "missionDescription": "Completa el camino taxonómico antes de que se acabe el tiempo.",
+    "missionDescription": "Una nueva especie cada día para desafiar tu dominio del árbol taxonómico. Completa todas las clasificaciones y sigue tu progreso.",
     "cancel": "Cancelar Desafío",
     "start": "Iniciar Desafío",
     "completed": "¡Clasificación completa!",
-    "path": "Reino → Especie",
+    "stepAttempts": "Intentos: {{count}}",
+    "stepErrors": "Errores: {{count}}",
+    "interactionTips": "Vio consejos",
+    "interactionRevealed": "Reveló la respuesta",
+    "interactionNames": "Vio nombres populares",
+    "interactionImage": "Vio la imagen",
     "timeRemaining": "Tiempo restante",
     "taxonomicPath": "Camino Taxonómico",
     "interactions": "interacciones",
@@ -212,7 +217,7 @@
     "belongsTo": "pertenece al",
     "howItWorks": "¿Cómo funciona el desafío?",
     "randomTitle": "Desafío Aleatorio",
-    "randomMissionDescription": "Completa el camino taxonómico de una especie elegida al azar.",
+    "randomMissionDescription": "Desafíos ilimitados con especies sorpresa. Practica libremente y fortalece tu comprensión de los caminos taxonómicos.",
     "allSpeciesCompleted": "¡Has completado todas las especies disponibles!",
     "replay": "Jugar de nuevo",
     "nextChallenge": "Siguiente desafío",
@@ -225,7 +230,19 @@
     "nextDay": "Día siguiente",
     "play": "Jugar",
     "otherDailyChallenges": "Otros desafíos diarios",
-    "dailyChallenges": "Desafíos Diarios"
+    "dailyChallenges": "Desafíos Diarios",
+    "timeTaken": "Tiempo",
+    "errorsLabel": "Errores",
+    "accuracyLabel": "Precisión",
+    "perfectErrors": "0",
+    "selectInTree": "Selecciona en el árbol",
+    "loadingPath": "Calculando camino...",
+    "orPlayOtherDate": "o explora otro día",
+    "dailyFeature1": "Nueva especie cada día",
+    "dailyFeature2": "Igual para todos",
+    "randomFeature1": "Especie sorpresa",
+    "randomFeature2": "Desafíos ilimitados",
+    "randomNoChallenge": "No hay desafíos disponibles ahora. Inténtalo más tarde."
   },
 
   "vulnerability": {
