--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -194,11 +194,16 @@
   "challenge": {
     "title": "Desafio Diário",
     "find": "Encontre",
-    "missionDescription": "Complete o caminho taxonômico antes do tempo acabar.",
+    "missionDescription": "Uma espécie nova por dia para desafiar seu domínio da árvore taxonômica. Complete todas as classificações e acompanhe sua evolução.",
     "cancel": "Cancelar Desafio",
     "start": "Iniciar Desafio",
     "completed": "Classificação completa!",
-    "path": "Reino → Espécie",
+    "stepAttempts": "Tentativas: {{count}}",
+    "stepErrors": "Erros: {{count}}",
+    "interactionTips": "Visualizou dicas",
+    "interactionRevealed": "Revelou a resposta",
+    "interactionNames": "Visualizou nomes populares",
+    "interactionImage": "Visualizou a imagem",
     "timeRemaining": "Tempo restante",
     "taxonomicPath": "Caminho Taxonômico",
     "interactions": "interações",
@@ -212,7 +217,7 @@
     "belongsTo": "pertence ao",
     "howItWorks": "Como funciona o desafio?",
     "randomTitle": "Desafio Aleatório",
-    "randomMissionDescription": "Complete o caminho taxonômico de uma espécie escolhida aleatoriamente.",
+    "randomMissionDescription": "Desafios ilimitados com espécies surpresa. Pratique livremente e fortaleça sua leitura dos caminhos taxonômicos",
     "allSpeciesCompleted": "Você completou todas as espécies disponíveis!",
     "replay": "Jogar de novo",
     "nextChallenge": "Próximo desafio",
@@ -225,7 +230,19 @@
     "nextDay": "Próximo dia",
     "play": "Jogar",
     "otherDailyChallenges": "Outros desafios diários",
-    "dailyChallenges": "Desafios Diários"
+    "dailyChallenges": "Desafios Diários",
+    "timeTaken": "Tempo",
+    "errorsLabel": "Erros",
+    "accuracyLabel": "Precisão",
+    "perfectErrors": "0",
+    "selectInTree": "Selecione na árvore",
+    "loadingPath": "Calculando caminho...",
+    "orPlayOtherDate": "ou explore outro dia",
+    "dailyFeature1": "Nova espécie todo dia",
+    "dailyFeature2": "Mesmo para todos",
+    "randomFeature1": "Espécie surpresa",
+    "randomFeature2": "Desafios ilimitados",
+    "randomNoChallenge": "Nenhum desafio disponível no momento. Tente mais tarde."
   },
 
   "vulnerability": {
